--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     name: Build Flutter App
+    if: contains(github.event.head_commit.message, 'smoke_test')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
