--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,22 @@ jobs:
 
       - run: flutter pub get
       - run: flutter build apk --release
-
+      - run: flutter build appbundle
+    
       - uses: actions/upload-artifact@v2
         with:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
+  build2:
+    name: upload to internal developers
+    if: contains(github.event.head_commit.message, 'internal')
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo internal job should be printed
+  build3:
+    name: upload to external developers
+    if: contains(github.event.head_commit.message, 'external')
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo external job should be printed
+  
