--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
 
 jobs:
-  build:
+  build-app:
     name: Build Flutter App
     if: contains(github.event.head_commit.message, 'release')
     runs-on: ubuntu-latest
@@ -29,12 +29,15 @@ jobs:
           name: release-apk
           path: build/app/outputs/apk/release/app-release.apk
   build2:
+    needs: build-app
     name: upload to internal developers
     if: contains(github.event.head_commit.message, 'internal')
     runs-on: ubuntu-latest
     steps:
       - run: echo internal job should be printed
+      - run: echo 
   build3:
+    needs: build-app
     name: upload to external developers
     if: contains(github.event.head_commit.message, 'external')
     runs-on: ubuntu-latest
