--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,20 +55,19 @@ jobs:
     name: uploading apk file
     runs-on: ubuntu-latest
     steps:
-      - name: Downloading Artifact
       - uses: actions/download-artifact@v2
         with:
           name: release-apk   
-      - name: Upload artifact to Firebase App Distribution External Testers
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
+
+      - uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
             appId: ${{secrets.APP_ID}}
             token: ${{secrets.TOKEN}}
             groups: external-group
             file: build/app/outputs/apk/release/app-release.apk
 
-      - name: upload artifact to Firebase App Distribution Internal Testers
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
+
+      - uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
             appId: ${{secrets.APP_ID}}
             token: ${{secrets.TOKEN}}
