--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,59 +21,65 @@ jobs:
           flutter-version: "3.3.4"
           channel: "stable"
 
-      - run: flutter pub get
-      - run: flutter build apk --release
-      - run: flutter build appbundle
+      # - run: flutter pub get
+      # - run: flutter build apk --release
+      # - run: flutter build appbundle
     
-      - uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: release-apk
+      #     path: build/app/outputs/flutter-apk/app-release.apk
+      - if: contains(github.event.head_commit.message, 'release')
+        run: echo "release keyword found"
+      - if: contains(github.event.head_commit.message, 'internal-release')
+        run: echo "internal-release keyword found"
+      - if: contains(github.event.head_commit.message, 'external-release')
+        run: echo "external-release keyword found"
 
-#this job is used to release to internal developers if we use internal-release keyword
-  internal-release:
-    if: contains(github.event.head_commit.message, 'internal-release')
-    needs: build-app
-    name: uploading apk file
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+# #this job is used to release to internal developers if we use internal-release keyword
+#   internal-release:
+#     if: contains(github.event.head_commit.message, 'internal-release')
+#     needs: build-app
+#     name: uploading apk file
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/download-artifact@v2
+#         with:
+#           name: release-apk
+#           path: build/app/outputs/flutter-apk/app-release.apk
 
-      - uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-            appId: ${{secrets.APP_ID}}
-            token: ${{secrets.TOKEN}}
-            groups: internal-group
-            file: build/app/outputs/flutter-apk/app-release.apk
+#       - uses: wzieba/Firebase-Distribution-Github-Action@v1
+#         with:
+#             appId: ${{secrets.APP_ID}}
+#             token: ${{secrets.TOKEN}}
+#             groups: internal-group
+#             file: build/app/outputs/flutter-apk/app-release.apk
 
-#this job is used to release to external developers if we use external-release keyword
-  external-release:
-    if: contains(github.event.head_commit.message, 'external-release')
-    needs: build-app
-    name: uploading apk file
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: release-apk   
-          path: build/app/outputs/flutter-apk/app-release.apk
+# #this job is used to release to external developers if we use external-release keyword
+#   external-release:
+#     if: contains(github.event.head_commit.message, 'external-release')
+#     needs: build-app
+#     name: uploading apk file
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/download-artifact@v2
+#         with:
+#           name: release-apk   
+#           path: build/app/outputs/flutter-apk/app-release.apk
 
-      - uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-            appId: ${{secrets.APP_ID}}
-            token: ${{secrets.TOKEN}}
-            groups: external-group
-            file: build/app/outputs/apk/release/app-release.apk
+#       - uses: wzieba/Firebase-Distribution-Github-Action@v1
+#         with:
+#             appId: ${{secrets.APP_ID}}
+#             token: ${{secrets.TOKEN}}
+#             groups: external-group
+#             file: build/app/outputs/apk/release/app-release.apk
 
 
-      - uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-            appId: ${{secrets.APP_ID}}
-            token: ${{secrets.TOKEN}}
-            groups: internal-group
-            file: build/app/outputs/flutter-apk/app-release.apk
+#       - uses: wzieba/Firebase-Distribution-Github-Action@v1
+#         with:
+#             appId: ${{secrets.APP_ID}}
+#             token: ${{secrets.TOKEN}}
+#             groups: internal-group
+#             file: build/app/outputs/flutter-apk/app-release.apk
 
   
