--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-name: Flutter Build APK
+name: CI CD Pipeline
 
 on:
   push:
+    branches: 
+     - 'main'
 
 jobs:
 #this job is used to build the app only when we use a release keyword
@@ -22,72 +24,28 @@ jobs:
           channel: "stable"
 
       - run: flutter pub get
-      - run: flutter build apk --release
-      # - run: flutter build appbundle
+      - run: flutter build appbundle
     
 
-      # - if: contains(github.event.head_commit.message, 'release')
-      #   run: echo "release keyword found"
-      # - if: contains(github.event.head_commit.message, 'internal-release')
+
       - uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
             appId: ${{secrets.APP_ID}}
             token: ${{secrets.TOKEN}}
             groups: internal-group
-            file: build/app/outputs/flutter-apk/app-release.apk
+            file: build/app/outputs/bundle/release/app-release.aab
       - if: contains(github.event.head_commit.message, 'external-release')
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
             appId: ${{secrets.APP_ID}}
             token: ${{secrets.TOKEN}}
             groups: external-group
-            file: build/app/outputs/flutter-apk/app-release.apk
+            file: build/app/outputs/bundle/release/app-release.aab
+## This will upload the generated artifacts so we may be able to download them
+## 
+      - run: flutter build apk --release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
 
-
-# #this job is used to release to internal developers if we use internal-release keyword
-#   internal-release:
-#     if: contains(github.event.head_commit.message, 'internal-release')
-#     needs: build-app
-#     name: uploading apk file
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/download-artifact@v2
-#         with:
-#           name: release-apk
-#           path: build/app/outputs/flutter-apk/app-release.apk
-
-#       - uses: wzieba/Firebase-Distribution-Github-Action@v1
-#         with:
-#             appId: ${{secrets.APP_ID}}
-#             token: ${{secrets.TOKEN}}
-#             groups: internal-group
-#             file: build/app/outputs/flutter-apk/app-release.apk
-
-# # #this job is used to release to external developers if we use external-release keyword
-# #   external-release:
-# #     if: contains(github.event.head_commit.message, 'external-release')
-# #     needs: build-app
-# #     name: uploading apk file
-# #     runs-on: ubuntu-latest
-# #     steps:
-# #       - uses: actions/download-artifact@v2
-# #         with:
-# #           name: release-apk   
-# #           path: build/app/outputs/flutter-apk/app-release.apk
-
-# #       - uses: wzieba/Firebase-Distribution-Github-Action@v1
-# #         with:
-# #             appId: ${{secrets.APP_ID}}
-# #             token: ${{secrets.TOKEN}}
-# #             groups: external-group
-# #             file: build/app/outputs/apk/release/app-release.apk
-
-
-# #       - uses: wzieba/Firebase-Distribution-Github-Action@v1
-# #         with:
-# #             appId: ${{secrets.APP_ID}}
-# #             token: ${{secrets.TOKEN}}
-# #             groups: internal-group
-# #             file: build/app/outputs/flutter-apk/app-release.apk
-
-  
