--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           channel: "stable"
 
       - run: flutter pub get
-      - run: flutter build appbundle
+      - run: flutter build apk --release
+
     
 
 
@@ -33,19 +34,24 @@ jobs:
             appId: ${{secrets.APP_ID}}
             token: ${{secrets.TOKEN}}
             groups: internal-group
-            file: build/app/outputs/bundle/release/app-release.aab
+            file: build/app/outputs/flutter-apk/app-release.apk
       - if: contains(github.event.head_commit.message, 'external-release')
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
             appId: ${{secrets.APP_ID}}
             token: ${{secrets.TOKEN}}
             groups: external-group
-            file: build/app/outputs/bundle/release/app-release.aab
+            file: build/app/outputs/flutter-apk/app-release.apk
 ## This will upload the generated artifacts so we may be able to download them
 ## 
-      - run: flutter build apk --release
       - uses: actions/upload-artifact@v2
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+      - run: flutter build appbundle
+      - uses: actions/upload-artifact@v2
+        with:
+          name: app-bundle
+          path: build/app/outputs/bundle/release/app-release.aab
+
 
